fixed minor errors in code
